@@ -52,10 +52,25 @@ angular.module('wing',[])
  * Generic wing object list manipulation for Wing using Angular.
  */
 
-.factory('objectListManager', ['$http','confirmations',function ($http, confirmations) {
+.factory('objectListManager', ['$http','objectManager',function ($http, objectManager) {
     return function(behavior) {
         this.objects = [];
         this.paging = [];
+        
+        this._create_object_manager = function(properties, index) {
+            var self = this;
+            return new objectManager({
+                properties : properties,
+                fetch_options : behavior.fetch_options,
+                create_api : behavior.create_api,
+                on_create : behavior.on_create,
+                on_update : behavior.on_update,
+                on_delete : function(properties) {
+                    behavior.on_delete(properties);
+                    self.objects.splice(index, 1);
+                },
+            });
+        };
         
         this.search = function(options) {
             var self = this;
@@ -69,9 +84,13 @@ angular.module('wing',[])
             }
             $http.get(behavior.list_api, { params : params })
             .success(function (data) {
-                self.objects = data.result.items;
+                self.objects = [];
+                for (var index = 0; index < data.result.items.length; index++) {
+                    self.objects.push(self._create_object_manager(data.result.items[index], index));
+                }
                 self.paging = data.result.paging;
             });
+            return self;
         };
         
         this.all = function(page_number) {
@@ -82,67 +101,63 @@ angular.module('wing',[])
             }, behavior.fetch_options);
             $http.get(behavior.list_api, { params : params })
             .success(function (data) {
-                self.objects = self.objects.concat(data.result.items);
+                var start = self.objects.length;
+                for (var index = start; index < start + data.result.items.length; index++) {
+                    self.objects.push(self._create_object_manager(data.result.items[index], index));
+                }
                 if (data.result.paging.page_number < data.result.paging.total_pages) {
                     self.all(data.result.paging.next_page_number);
                 }
             });
+            return self;
         };
         
         this.create = function(properties, options) {
             var self = this;
-            var params = wing.merge(behavior.fetch_options, properties );
-            $http.post(behavior.create_api, params)
-            .success(function (data) {
-                self.objects.push(data.result);
-                if (typeof options !== 'undefined' && typeof options.on_success !== 'undefined') {
-                    options.on_success(data.result, self.objects.length - 1);
+            var new_object = self._create_object_manager(properties, self.objects.length);
+            var add_it = function() {
+                self.objects.push(new_object);
+            };
+            if (typeof options !== 'undefined') {
+                if (typeof options.on_success !== 'undefined') {
+                    options.on_success = function(properties) {
+                        options.on_success(properties);
+                        add_it();
+                    };
                 }
-                if (typeof behavior.on_create !== 'undefined') {
-                    behavior.on_create(data.result, self.objects.length - 1);
+                else {
+                    options['on_success'] = add_it;
                 }
-            });
+            }
+            else {
+                options = {on_success : add_it};
+            }
+            new_object.create(properties, options);
+            return self;
         };
         
         this.update =  function(index, options) {
             var self = this;
-            self.partial_update(index, self.objects[index], options);
+            self.objects[index].update(options);
+            return self;
+        };
+
+        this.save =  function(index, property) {
+            var self = this;
+            self.objects[index].save(property);
+            return self;
         };
 
         this.partial_update =  function(index, properties, options) {
             var self = this;
-            var params = wing.merge(behavior.fetch_options, properties);
-            $http.put(self.objects[index]._relationships.self, params)
-            .success(function (data) {
-                self.objects[index] = data.result;
-                if (typeof options !== 'undefined' && typeof options.on_success !== 'undefined') {
-                    options.on_success(data.result, index);
-                }
-                if (typeof behavior.on_update !== 'undefined') {
-                    behavior.on_update(data.result, index);
-                }
-            });
+            self.objects[index].partial_update(properties, options);
+            return self;
         };
 
         this.delete = function(index, options) {
             var self = this;
-            var object = self.objects[index];
-            var message = 'Are you sure?';
-            if ('name' in object) {
-                message = 'Are you sure you want to delete ' + object.name + '?';
-            }
-            if (confirmations.disabled() || confirm(message)) {
-                $http.delete(object._relationships.self, {})
-                .success(function (data) {
-                    self.objects.splice(index, 1);
-                    if (typeof options !== 'undefined' && typeof options.on_success !== 'undefined') {
-                        options.on_success(object, index);
-                    }
-                    if (typeof behavior.on_delete !== 'undefined') {
-                        behavior.on_delete(object, index);
-                    }
-                });
-            }
+            self.objects[index].delete(options);
+            return self;
         };
     };
 }])
@@ -153,7 +168,7 @@ angular.module('wing',[])
 
 .factory('objectManager', ['$http','confirmations',function ($http, confirmations) {
     return function(behavior) {
-        this.properties = [];
+        this.properties = behavior.properties || {};
         
         this.fetch = function(options) {
             var self = this;
@@ -167,6 +182,7 @@ angular.module('wing',[])
                     behavior.on_fetch(data.result);
                 }
             });
+            return self;
         };
         
         this.create = function(properties, options) {
@@ -182,11 +198,13 @@ angular.module('wing',[])
                     behavior.on_create(data.result);
                 }
             });
+            return self;
         };
         
         this.update =  function(options) {
             var self = this;
             self.partial_update(self.properties, options);
+            return self;
         };
         
         this.save = function(property) {
@@ -194,6 +212,7 @@ angular.module('wing',[])
             var update = {};
             update[property] = self.properties[property];
             self.partial_update(update);
+            return self;
         };
 
         this.partial_update =  function(properties, options) {
@@ -209,6 +228,7 @@ angular.module('wing',[])
                     behavior.on_update(data.result);
                 }
             });
+            return self;
         };
         
         this.delete = function(options) {
@@ -230,6 +250,7 @@ angular.module('wing',[])
                     }
                 });
             }
+            return self;
         };
     };
 }])
@@ -258,4 +279,75 @@ angular.module('wing',[])
             }
         }
     }
-}]);
+}])
+
+/*
+ * Gives you a nice wrapper so you can automatically save a field like wing.attach_autosave(). You can do:
+ *
+ * <input ng-model="object.properties.property_name" autosave="object">
+ *
+ * which is the equivalent of
+ *
+ * <input ng-model="object.properties.property_name" options="{ updateOn: 'blur' }" ng-change="object.save('property_name')">
+ * 
+ */
+
+.directive('autosave', [function() {
+    return {
+        restrict: 'A',
+        scope : {
+            autosave : '=',
+        },
+        link: function(scope, element, attrs) {
+            element.bind('change', function(){
+                var property_name = attrs.ngModel.match(/(?=[^.]*$)(\w+)/)[1];
+                scope.autosave.save(property_name);
+            });
+        }
+    }
+}])
+
+/*
+ * Give syou a nice way to generate select lists from wing options
+ *
+ * <wing-select object="object_name" property="property_name"></wing-select>
+ *
+ * which is the equivalent of
+ *
+ * <select ng-options="option.toString() as object.properties._options._property_name[option] for option in object.properties._options.property_name" autosave="object" class="form-control" ng-model="object.properties.property_name"></select>
+ * 
+ */
+
+.directive('wingSelect', ['$compile', function($compile) {
+    return {
+        restrict: 'E',
+        scope : {
+            object : '=',
+        },
+        link: function(scope, element, attrs) {
+            var object_name = attrs.object;
+            var property_name = attrs.property;
+            var options_property_name = '_' + property_name;
+            var html = '<select force-string ng-options="option.toString() as object.properties._options.' + options_property_name + '[option] for option in object.properties._options.' + property_name + '" autosave="object" class="form-control" ng-model="object.properties.' + property_name + '"></select>';
+            var e = $compile(html)(scope);
+            element.replaceWith(e);
+        }
+    }
+}])
+
+/*
+ * Forces the model to be a string even if it's labeled a number.
+ */
+
+.directive('forceString', ['$compile', function($compile) {
+    return {
+        restrict: 'A',
+        require: 'ngModel',
+        link: function(scope, element, attrs, ngModel) {
+            ngModel.$formatters.push(function(modelValue) {
+                return modelValue.toString();
+            });
+        }
+    }
+}])
+;
